<?xml version="1.0"?>
<package format="2">
  <name>arduino_listener</name>
  <version>0.0.0</version>
  <description>The arduino_listener package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export></export>
</package>
